# BlueHub

./: .clinerules  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_UPDATE_SUMMARY.md  CONTRIBUTING.md  DEBUG_PROTOCOLS.md  Dockerfile  Dockerfile.backend  Dockerfile.test  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  INFRASTRUCTURE_SPEC_COMPLETE.md  Makefile  README.md  TESTING.md  alembic.ini  check_db.py  convert_to_unittest.py  docker-compose.yml  main.py  pyproject.toml  ruff_errors.json  run_tests.py  task_status.txt  test.sh  translate_helper.py  خلاصه_نهایی.md
.Blue/decisions/: ADR.md
.Blue/docops/: COMMAND_GUIDE.md  README.md  STATUS.md  auto_reporter.py  test_reporter.py
.Blue/docops/sessions/: .gitkeep  2026-06-10_session-5.md
.Blue/docops/snapshots/: .gitkeep
.Blue/docops/templates/: session_report.md
.Blue/memory/: BUGS.md  CURRENT_STATE.md  PROGRESS.md
.Blue/specs/: INFRASTRUCTURE_COMPLETE_SPEC.md  README.md  UPDATED_CHANGES.md  design.md  requirements.md  tasks.md
alembic/: README.md  env.py
alembic/versions/: 20260613_235959_initial_schema.py  20260614_030920_billing_tables.py  20260614_164420_vpn_tables.py  20260614_201944_vpn_servers_table.py  20260615_014400_vps_tables.py  20260615_201200_vps_tables.py  20260620_021230_add_module_registry_fields.py  20260623_020930_add_full_name_is_active_fix_email.py  20260625_000100_smartdns_tables.py  bb19837c3368_merge_heads.py  c4c80453a30d_add_audit_logs_columns.py
api/: README.md
api/v1/: __init__.py  admin.py  audit.py  auth.py  billing.py  game.py  modules.py  monitoring.py  rbac.py  smartdns.py  tenants.py  users.py  vpn.py  vps.py  webhooks.py
bot/: README.md  __init__.py  main.py
bot/handlers/: __init__.py  account.py  admin.py  language_callback.py  smartdns.py  start.py  vpn.py  vps.py
bot/keyboards/: __init__.py  language.py  main_menu.py
bot/middleware/: __init__.py  auth.py  i18n.py
config/locales/: __init__.py  en.json  fa.json
core/: README.md  cache.py  config.py  container.py  database.py  exceptions.py  logging.py
core/admin/: __init__.py  schemas.py  service.py
core/audit/: __init__.py  logger.py  schemas.py  service.py
core/auth/: __init__.py  jwt.py  password.py
core/billing/: __init__.py  schemas.py  service.py
core/i18n/: __init__.py  engine.py  middleware.py
core/license/: __init__.py
core/models/: __init__.py  base.py  mixins.py
core/notifications/: __init__.py
core/paymenter/: __init__.py  schemas.py  service.py
core/rbac/: __init__.py  dependencies.py  schemas.py  service.py
core/registry/: __init__.py  dependencies.py  schemas.py  service.py
core/repositories/: __init__.py  base.py  unit_of_work.py
core/users/: __init__.py  schemas.py  service.py
core/validation/: __init__.py  base.py  schemas.py
dependencies/: __init__.py  auth.py  db.py
infrastructure/: __init__.py
infrastructure/init-db/: 01-init.sql  99_fix_postgres_role.sql
infrastructure/init-db/paymenter/: 01-init.sql
memory/: BUGS.md  CURRENT_STATE.md  PROGRESS.md
modules/: README.md
modules/game/: __init__.py  metadata.py  models.py  schemas.py  services.py
modules/smartdns/: __init__.py  metadata.py  models.py  pdns_client.py  schemas.py  services.py
modules/streaming/: __init__.py  metadata.py
modules/vpn/: __init__.py  metadata.py  models.py  schemas.py  services.py  vpn_servers.py  wireguard.py  xray.py
modules/vps/: __init__.py  metadata.py  models.py  proxmox_client.py  schemas.py  services.py
scripts/: analyze_tasks.py  check_db_tables.py  check_tasks.py  download_dnspython.py  download_email_validator.py  download_email_validator2.py  download_packages.py  fix_env.py  full_reset_db.py  generate_env.py  generate_migration.py  reset_migrations.py  search_test_patterns.py  search_xray_sigs.py  verify_clean_db.py  verify_migration.py
services/: README.md  celery_app.py  t
services/tasks/: __init__.py  heartbeat.py  maintenance.py  monitoring.py  smartdns.py  vpn.py  vps.py
shared/models/: __init__.py  abuse_report.py  audit_log.py  base.py  enums.py  invoice.py  module_registry.py  paymenter_webhook.py  product.py  service.py  tenant.py  transaction.py  user.py
shared/schemas/: __init__.py
test-reports/: SUMMARY.txt  latest.json
tests/: pytest.py  pytest_compat.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_integration_example.py
tests/unit/: __init__.py  test_audit.py  test_auth.py  test_bot.py  test_celery.py  test_example.py  test_i18n.py  test_module_registry.py  test_paymenter_webhooks.py  test_rbac.py  test_vpn_tasks.py  test_vps.py  test_xray.py
web/: README.md
web/admin/: .dockerignore  Dockerfile  README.md  cleaner.py  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
web/admin/messages/: en.json  extracted.json  extracted_all.json  extracted_full.json  extracted_ultimate.json  fa.json  fa.json.backup  i18n-report.json
web/admin/scripts/: count-i18n-files.ts  extract-advanced-i18n.ts  extract-full-i18n.ts  extract-i18n.ts  extract-ultimate-i18n.ts
web/admin/src/app/: globals.css  layout.tsx
web/admin/src/app/dashboard/: layout.tsx  page.tsx
web/admin/src/components/: date-range-picker.tsx
web/admin/src/components/calendar/: event-calendar-views.tsx
web/admin/src/components/layout/: Sidebar.tsx
web/admin/src/components/ui/: calendar.tsx  chart.tsx  (+2 more)
web/admin/src/config/: app-config.ts
web/admin/src/data/: users.ts
web/admin/src/i18n/: en.json  fa.json  request.ts
web/admin/src/lib/: api.ts  auth.ts  theme.tsx  utils.ts
web/admin_old/: .gitignore  Dockerfile  __init__.py  package.json  tailwind.config.ts
web/admin_old/src/app/: globals.css
web/admin_old/src/components/: Header.tsx  Sidebar.tsx  ui.tsx
web/admin_old/src/lib/: api.ts  auth.ts  i18n.tsx  utils.ts
web/client/: __init__.py  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
web/client/src/app/: globals.css  layout.tsx  page.tsx
web/client/src/lib/: api-client.ts  providers.tsx  utils.ts
web/shared/: __init__.py
(+208 files in other folders)
