[tool.poetry]
name = "bluehub"
version = "0.1.0"
description = "BlueHub - Unified VPN/VPS/Streaming/Game Management Platform"
authors = ["BlueHub Team"]
license = "MIT"
readme = "README.md"
homepage = "https://bluehub.io"
repository = "https://github.com/BlueHubbot/blueHub"
documentation = "https://docs.bluehub.io"
keywords = ["vpn", "vps", "streaming", "game", "multi-tenant", "fastapi", "telegram-bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: System :: Networking",
    "Topic :: Communications :: Telephony",
]

packages = [
    { include = "core" },
    { include = "modules" },
    { include = "api" },
    { include = "bot" },
    { include = "web" },
    { include = "services" },
    { include = "shared" },
    { include = "config" },
    { include = "infrastructure" },
]

[tool.poetry.dependencies]
python = "^3.12"

# === Web Framework ===
fastapi = "^0.111.0"
uvicorn = { version = "^0.30.1", extras = ["standard"] }
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"
python-multipart = "^0.0.9"
orjson = "^3.10.3"

# === Database & ORM ===
sqlalchemy = { version = "^2.0.30", extras = ["asyncio"] }
asyncpg = "^0.29.0"
alembic = "^1.13.1"

# === Redis & Caching ===
redis = "^5.0.5"

# === Message Queue / Task Scheduler ===
celery = "^5.4.0"
flower = "^2.0.1"
apscheduler = "^3.10.4"

# === Telegram Bot ===
aiogram = "^3.7.0"

# === Authentication & Security ===
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pyotp = "^2.9.0"
qrcode = { version = "^7.4.2", extras = ["pil"] }

# === HTTP Client ===
httpx = "^0.27.0"

# === External Service Integrations ===
proxmoxer = "^2.0.1"
boto3 = "^1.34.128"
minio = "^7.2.7"

# === Monitoring & Observability ===
prometheus-client = "^0.20.0"
prometheus-fastapi-instrumentator = "^7.0.1"
structlog = "^24.1.0"

# === Resilience Patterns ===
pybreaker = "^1.0.0"
backoff = "^2.2.1"
tenacity = "^8.3.0"

# === Rate Limiting ===
slowapi = "^0.1.9"

# === Internationalization (i18n) ===
babel = "^2.15.0"

# === Configuration & Dependency Injection ===
dependency-injector = "^4.41.0"

# === Utilities ===
pytz = "^2024.1"
python-dateutil = "^2.9.0"
jinja2 = "^3.1.4"
rich = "^13.7.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
# === Code Quality & Linting ===
ruff = "^0.4.8"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

# === Testing ===
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-repeat = "^0.9.3"
pytest-xdist = "^3.6.1"
coverage = "^7.5.3"

# === Test Fixtures & Data Generation ===
faker = "^25.1.0"
factory-boy = "^3.3.0"

# === HTTP Mocking ===
respx = "^0.21.1"

# === Snapshot Testing ===
snapshottest = "^0.6.0"

# === Test Runner ===
tox = "^4.15.1"

# === Type Stubs ===
types-python-dateutil = "^2.9.0.20240316"
types-pytz = "^2024.1.0.20240417"
types-psutil = "^5.9.5.20240516"

# === Documentation ===
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.27"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "migrations",
    "venv",
    ".venv",
    ".tox",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle warnings
    "UP",   # pyupgrade
    "ANN",  # annotations
    "ARG",  # unused arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "ERA",  # eradicate (commented-out code)
    "FLY",  # flynt (f-string conversion)
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "NPY",  # NumPy-specific rules
    "PD",   # pandas-vet
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi (stub files)
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific rules
    "SIM",  # flake8-simplify
    "SLF",  # self/private-attribute access
    "SLOT", # __slots__ rules
    "T10",  # flake8-debugger
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops (exception handling)
    "YTT",  # flake8-2020 (sys.version_info checks)
]
ignore = [
    "ANN401",  # dynamically-typed-expression (allow Any in edge cases)
    "PLC0414", # import alias does not rename original package (conflicts with `import x as x` pattern)
    "PLR0913", # too-many-arguments (acceptable in some cases)
    "SIM117",  # multiple-with-statements (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",     # no annotation requirements in tests
    "S101",    # allow assert in tests
    "PLR2004", # allow magic values in tests
    "SLF001",  # allow accessing private members in tests
]
"migrations/*" = ["ALL"]
"*.pyi" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

# =============================================================================
# mypy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
strict = true
explicit_package_bases = true
check_untyped_defs = false
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
no_implicit_optional = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "celery.*",
    "alembic.*",
    "dependency_injector.*",
    "proxmoxer.*",
    "boto3.*",
    "minio.*",
    "slowapi.*",
    "pybreaker.*",
    "flower.*",
    "apscheduler.*",
    "structlog.*",
    "orjson.*",
    "rich.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.mypy.plugins]
pydantic = true
sqlalchemy = true

# =============================================================================
# pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
    "tests/unit",
    "tests/integration",
    "tests/e2e",
]
pythonpath = [".."]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:alembic.*:",
    "ignore::DeprecationWarning:sqlalchemy.*:",
    "ignore::DeprecationWarning:pkg_resources:",
    "ignore::DeprecationWarning:crypt:",
    "ignore::DeprecationWarning:passlib.*:",
    "ignore::pytest.PytestUnraisableExceptionWarning:",
]
markers = [
    "unit: Unit tests (automated, no external deps)",
    "integration: Integration tests (requires DB/Redis)",
    "e2e: End-to-end tests (full system)",
    "slow: Slow tests (skip with -m 'not slow')",
    "vpn: VPN module tests",
    "vps: VPS module tests",
    "smartdns: SmartDNS module tests",
    "streaming: Streaming module tests",
    "game: Game module tests",
    "auth: Authentication tests",
    "api: API endpoint tests",
    "bot: Telegram bot tests",
    "webhook: Webhook integration tests",
    "celery: Celery task tests",
    "regression: Regression test suite",
    "smoke: Quick smoke tests for CI",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["core", "modules", "api", "bot", "services", "shared"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "conftest.py",
    "setup.py",
]
parallel = true
concurrency = ["thread", "gevent"]

[tool.coverage.report]
show_missing = true
skip_covered = false
skip_empty = true
fail_under = 80
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\b:",
    "@overload",
    "...",
]

[tool.coverage.html]
directory = "coverage_html"
title = "BlueHub Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# tox Configuration
# =============================================================================

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py312, lint, typing, coverage
min_version = 4.0
skip_missing_interpreters = true
isolated_build = true

[testenv]
deps =
    pytest>=8.0
    pytest-asyncio
    pytest-cov
    httpx
commands =
    pytest {posargs:--cov --cov-report=term-missing -x tests/}

[testenv:lint]
deps = ruff
commands = ruff check . --fix

[testenv:typing]
deps =
    mypy
    pydantic
    sqlalchemy-stubs
commands = mypy core/ modules/ api/ bot/ services/

[testenv:coverage]
deps =
    pytest
    pytest-cov
    pytest-asyncio
    httpx
commands =
    pytest --cov --cov-report=html --cov-report=xml tests/
"""

# =============================================================================
# pyright Configuration
# =============================================================================

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = [
    "core",
    "modules",
    "api",
    "bot",
    "services",
    "shared",
    "config",
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/migrations",
    "**/venv",
    "**/.venv",
    ".tox",
]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportMissingParameterType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportPrivateUsage = false
reportUntypedBaseClass = false

# =============================================================================
# bandit Security Configuration
# =============================================================================

[tool.bandit]
targets = ["core", "modules", "api", "bot", "services", "shared"]
skips = ["B101", "B303", "B311", "B324"]
assert_used = false
exclude_dirs = ["tests", "migrations", "venv", ".venv"]

# =============================================================================
# isort Configuration (fallback for editors)
# =============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = [
    "core",
    "modules",
    "api",
    "bot",
    "services",
    "shared",
    "config",
    "infrastructure",
]
known_third_party = [
    "fastapi",
    "pydantic",
    "sqlalchemy",
    "alembic",
    "aiogram",
    "celery",
    "redis",
    "httpx",
    "boto3",
    "minio",
    "prometheus_client",
    "structlog",
    "dependency_injector",
    "jose",
    "passlib",
    "pyotp",
    "qrcode",
    "slowapi",
]
skip = [
    "migrations",
    "venv",
    ".venv",
    ".tox",
]